mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mydb-statefulset
  labels:
    apps: wordpress
spec:
  selector:
    matchLabels:
      apps: wordpress
      tier: mysql
  replicas: 1
  serviceName: mysql-svc
  template:
    metadata:
      labels:
        apps: wordpress
        tier: mysql
      name: mydb
    spec:
      containers:
      - name: database
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
        startupProbe:
          exec:
            command:
            - mysqladmin
            - ping
        livenessProbe:
          exec:
            command: ['mysqladmin','ping']
      volumes: 
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-pvc
