mysql-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-headless
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
  publishNotReadyAddresses: true
