mysql-svc-read.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc-read
spec:
  selector:
    app: mysql-read
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
