mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    apps: wordpress
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    apps: wordpress
    tier: mysql
