wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  labels:
    apps: wordpress
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31111
  type: NodePort
  selector:
    apps: wordpress
    tier: frontend
